mobile nav and whitespace fix

--- a/assets/css/girlscout.css
+++ b/assets/css/girlscout.css
@@ -2,9 +2,8 @@
 /* CSS Document */
 
 .width {
-	max-width: 720px;
 	margin:auto;
-
+	overflow: hidden;
 }
 
 .color {
@@ -42,26 +41,6 @@
 
 .smallpadtop {
 	padding-top:5px;
-}
-
-h1 {
-	padding-top:15px;
-}
-
-hr {
-	color: #f00;
-	height: 5px;
-	padding:0;
-	margin:0;
-}
-
-a {
-	color:white;
-}
-
-a:hover {
-	text-decoration: none;
-	color:white;
 }
 
 .div {
@@ -142,30 +121,6 @@ a:hover {
 	background-color:#007236;
 }
 
-input {
-	width: 100%;
-	border-radius: 5px;
-	height: 22px;
-	color: black;
-}
-
-form {
-	color:#00A850;
-}
-
-.div2 {
-	padding-top: 10px;
-	padding-bottom: 0px;
-	width:175px;
-	height:40px;
-	background-color:#007236;
-	color: #ffffff;
-	border-radius: 30px 30px 30px 30px;
-	margin-top: 10px;
-	font-size: .85em;
-	margin-left: 20px;
-}
-
 .header3{
 	display:flex;
 	justify-content: flex-end;
@@ -225,6 +180,10 @@ form {
 		background-color: #FFDA5C;
 }
 
+.hamburger {
+	display:none;
+}
+
 @media only screen and (max-width: 650px){
 	.col-2 {
 		-ms-flex: 0 0 100%;
@@ -237,14 +196,10 @@ form {
 	}
 
 	.login {
-			padding-top: 8px;
-			padding-bottom: 0px;
 			width: 100%;
-			height:35px;
-			color: #000000;
-			border-radius: 30px 30px 30px 30px;
-			margin-top: 10px;
-			font-size: .85em;
-			background-color: #FFDA5C;
+	}
+
+	.hamburger {
+		display:inline;
 	}
 }
